# diskey

./: README.md  meson.build
diskey/: diskey-app.c  diskey-app.h  diskey-debug.c  diskey-debug.h  diskey-event-data.c  diskey-event-data.h  diskey-event-keyboard.c  diskey-event-keyboard.h  diskey-event-mouse.c  diskey-event-mouse.h  diskey-indicator.h  diskey-input-listener.c  diskey-input-listener.h  diskey-monitor.c  diskey-monitor.h  diskey-mouse.c  diskey-mouse.h  diskey-window.c  diskey-window.h  diskey.c  meson.build  temp.c
diskey/resources/: diskey.gresource.xml.in  meson.build
diskey/resources/css/: diskey-style.css
doc/: README.md
